--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -233,15 +233,15 @@
           "b50-records": "导出为 JSON (仅 B50 记录)"
         },
         "oneshot-image": {
-          "button": "渲染 B50 图片...",
+          "button": "渲染为 B50 图片...",
           "dialog": {
-            "title": "渲染 B50 图片...",
+            "title": "渲染为 B50 图片...",
             "loading": {
               "title": "渲染中...",
               "calculating": "计算中...",
               "message": "这可能需要一段时间，具体取决于当前服务器负载；通常来说，渲染将在 10 秒内完成。"
             },
-            "error": "渲染图片时发生错误: {{message}}",
+            "error": "渲染图片时发生错误：{{message}}",
             "save-instruction": "长按或右键点击图片以保存到您的设备。",
             "beta-notice": "此功能处于测试阶段，可能无法正常工作。请随时向开发者报告任何问题或反馈 :D"
           }
@@ -251,22 +251,19 @@
         "button": "导入...",
         "diving-fish": {
           "title": "从水鱼查分器导入...",
-          "description": "选择以下两个选项之一并填写相应的字段。您的设置将保存在您的浏览器中。",
-          "loading": "从水鱼查分器导入中...",
-          "success": "成功从水鱼查分器导入 {{count}} 条记录。",
-          "error": "从水鱼查分器导入记录时发生错误。您确定绑定的用户名或 QQ 正确吗？{{error}}",
-          "invalid-profile": "请输入您的水鱼查分器配置",
+          "description": "请选择以下两个选项之一并填写对应字段。您的设置将保存在浏览器中。",
+          "loading": "正在从水鱼查分器导入...",
+          "success": "已从水鱼查分器导入 {{count}} 条记录",
+          "error": "从水鱼查分器导入记录时发生错误。请确认用户名或绑定的 QQ 是否正确？{{error}}",
+          "invalid-profile": "请输入您的水鱼查分器资料",
           "no-sheets": "未找到谱面",
           "warning": {
             "title": "注意！",
-            "description": "您的现有记录将被导入的记录覆盖。"
+            "description": "您现有的记录将被导入的记录覆盖。"
           },
           "or": "或",
           "close": "关闭",
-          "import": "导入",
-          "importing": "导入中...",
-          "missing-profile-info": "请输入您的水鱼查分器配置",
-          "only-one-of-the-two-fields-should-be-filled": "请仅填写一个字段"
+          "import": "导入"
         },
         "aqua-dx": {
           "title": "从 AquaDX 导出的 JSON 导入...",
@@ -283,13 +280,13 @@
           "error": "导入失败: {{error}}"
         },
         "net-records": {
-          "title": "从 maimai NET 导入...",
+          "title": "从 NET 导入...",
           "success": "已导入 {{count}} 条记录",
           "error": "导入失败：{{error}}",
           "dialog": {
             "title": "从 NET 导入",
-            "sega-id": "SEGA 账号",
-            "sega-password": "SEGA 账号密码",
+            "sega-id": "您的世嘉 ID",
+            "sega-password": "您的世嘉 ID 密码",
             "region": {
               "label": "地区",
               "intl": {
@@ -302,12 +299,12 @@
               }
             },
             "remember-credentials": {
-              "label": "记住登录信息",
-              "description": "登录信息将保存在浏览器本地。"
+              "label": "记住凭据",
+              "description": "您的凭据将存储在浏览器本地。"
             },
             "auto-import": {
-              "label": "启动时自动导入",
-              "description": "打开 DXRating 时自动从 NET 导入记录。需要启用“记住登录信息”。",
+              "label": "应用启动时自动导入",
+              "description": "打开 DXRating 时自动从 NET 导入记录。需要启用"记住凭据"。",
               "options": {
                 "disabled": {
                   "title": "禁用"
@@ -318,24 +315,24 @@
                 },
                 "merge": {
                   "title": "合并",
-                  "description": "更高分数覆盖，缺失记录添加"
+                  "description": "如果更高则覆盖，如果缺失则添加"
                 }
               }
             },
             "security-notice": {
-              "credentials": "您的登录信息不会被保存、记录或分享，仅在导入过程中使用。如有需要，您可以",
-              "source-code": "查看源代码",
+              "credentials": "您的凭据不会被存储、记录或共享，仅在导入过程中使用。如果您愿意，您可以",
+              "source-code": "检查源代码",
               "slsa": {
-                "text": "我们正在采用",
+                "text": "我们也正在采用",
                 "framework": "SLSA 框架",
-                "description": "，包括可重现构建和签名容器镜像，以帮助用户确认服务器上运行代码的真实性。此外，如果需求足够，我们将支持连接到自托管的 NET 导入服务实例，让您可以在自己的基础设施上运行。"
+                "description": "，包括可重现构建和签名容器镜像，以帮助用户确定服务器上运行的代码的真实性。此外，如果需求出现，我们将支持连接到自托管的 NET 导入服务实例，这样您就可以在自己的基础设施上运行它。"
               }
             },
             "actions": {
               "close": "关闭",
               "import-once": "导入一次",
               "reimport": {
-                "title": "重新导入",
+                "title": "立即重新导入",
                 "description": "(已启用自动导入)"
               },
               "importing": "导入中..."
