--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -329,8 +329,8 @@
               "label": "地域"
             },
             "remember-credentials": {
-              "description": "次回以降のインポートに使用するため、ログイン情報を保存します。",
-              "label": "ログイン情報を保存"
+              "label": "認証情報を記憶する",
+              "description": "認証情報はブラウザにローカルで保存されます。"
             },
             "security-notice": {
               "credentials": "あなたのログイン情報は保存されず、記録されず、共有されません。インポートプロセスの間のみ使用されます。ご希望であれば、",
